[package]
name = "tx_test"
version = "0.1.0"
edition = "2021"

[dependencies]
#reth-db = { git = "https://github.com/BigBenlau/reth_ben", rev = "cfcf34d8", package = "reth-db"}
reth-db = { path = "/home/user/data/Brian/benchmark/brian_reth/crates/storage/db"}

#reth-provider = { git = "https://github.com/BigBenlau/reth_ben", rev = "cfcf34d8", package = "reth-provider"}
reth-provider = { path = "/home/user/data/Brian/benchmark/brian_reth/crates/storage/provider"}

#reth-chainspec = { git = "https://github.com/BigBenlau/reth_ben", rev = "cfcf34d8", package = "reth-chainspec"}
reth-chainspec = { path = "/home/user/data/Brian/benchmark/brian_reth/crates/chainspec"}

#reth-primitives = { git = "https://github.com/BigBenlau/reth_ben", rev = "cfcf34d8", package = "reth-primitives"}
reth-primitives = { path = "/home/user/data/Brian/benchmark/brian_reth/crates/primitives"}

#reth-revm = { git = "https://github.com/BigBenlau/reth_ben", rev = "cfcf34d8", package = "reth-revm"}
reth-revm = { path = "/home/user/data/Brian/benchmark/brian_reth/crates/revm"}

#reth-evm-ethereum = { git = "https://github.com/BigBenlau/reth_ben", rev = "cfcf34d8", package = "reth-evm-ethereum"}
reth-evm-ethereum = { path = "/home/user/data/Brian/benchmark/brian_reth/crates/ethereum/evm"}

#reth-blockchain-tree = { git = "https://github.com/BigBenlau/reth_ben", rev = "cfcf34d8", package = "reth-blockchain-tree"}
reth-blockchain-tree = { path = "/home/user/data/Brian/benchmark/brian_reth/crates/blockchain-tree"}

#reth-beacon-consensus =  { git = "https://github.com/BigBenlau/reth_ben", rev = "cfcf34d8", package = "reth-beacon-consensus"}
reth-beacon-consensus =  { path = "/home/user/data/Brian/benchmark/brian_reth/crates/consensus/beacon"}

#reth-consensus = { git = "https://github.com/BigBenlau/reth_ben", rev = "cfcf34d8", package = "reth-consensus"}
reth-consensus = { path = "/home/user/data/Brian/benchmark/brian_reth/crates/consensus/consensus"}

#revm-interpreter = { git = "https://github.com/BigBenlau/reth_ben", rev = "cfcf34d8", package = "revm-interpreter"}
revm-interpreter = { path = "/home/user/data/Brian/benchmark/brian_reth/locals/interpreter"}

tracing = "0.1.0"
tracing-appender = "0.2"
chrono = "0.4.34"
csv = "1.3.0"
